Implement complete fintech backend with JWT authentication, role-based access control, financial records CRUD, filtering, pagination, soft delete, dashboard analytics using MongoDB aggregation, global exception handling, and clean layered architecture