@@ -2,7 +2,6 @@ package com.zorvyn.finance.service;
 
 import com.zorvyn.finance.dto.DashboardSummary;
 import com.zorvyn.finance.entity.FinancialRecord;
-import com.zorvyn.finance.entity.RecordType;
 import com.zorvyn.finance.repository.FinancialRecordRepository;
 
 import lombok.RequiredArgsConstructor;
@@ -10,7 +9,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,33 +17,21 @@ public class DashboardService {
     private final FinancialRecordRepository recordRepository;
     private final UserService userService;
 
-
     /**
      * Full dashboard summary - accessible by ALL roles (VIEWER, ANALYST, ADMIN).
-     * Returns income, expense, balance, category totals, recent activity, and monthly trends.
+     * Now uses MongoDB aggregation instead of Java streams.
      */
     public DashboardSummary getSummary() {
-        userService.resolveCaller(); // any authenticated user can view the dashboard
 
-        List<FinancialRecord> all = recordRepository.findByDeletedFalse();
+        userService.resolveCaller();
 
-        double totalIncome = all.stream()
-                .filter(r -> r.getType() == RecordType.INCOME)
-                .mapToDouble(FinancialRecord::getAmount)
-                .sum();
+        double totalIncome = recordRepository.getTotalIncome();
+        double totalExpense = recordRepository.getTotalExpense();
 
-        double totalExpense = all.stream()
-                .filter(r -> r.getType() == RecordType.EXPENSE)
-                .mapToDouble(FinancialRecord::getAmount)
-                .sum();
-
-        Map<String, Double> categoryTotals = all.stream()
-                .collect(Collectors.groupingBy(
-                        FinancialRecord::getCategory,
-                        Collectors.summingDouble(FinancialRecord::getAmount)
-                ));
-
-        List<Map<String, Object>> recentActivity = recordRepository.findTop5ByDeletedFalseOrderByDateDesc()
+        Map<String, Double> categoryTotals = recordRepository.getCategoryTotals();
+        Map<String, Double> monthlyTrends = recordRepository.getMonthlyTrends();
+        List<Map<String, Object>> recentActivity = recordRepository
+                .findTop5ByDeletedFalseOrderByDateDesc()
                 .stream()
                 .map(r -> {
                     Map<String, Object> entry = new LinkedHashMap<>();
@@ -56,9 +42,7 @@ public class DashboardService {
                     entry.put("date", r.getDate());
                     return entry;
                 })
-                .collect(Collectors.toList());
-
-        Map<String, Double> monthlyTrends = buildMonthlyTrends(all);
+                .toList();
 
         return new DashboardSummary(
                 totalIncome,
@@ -68,25 +52,5 @@ public class DashboardService {
                 recentActivity,
                 monthlyTrends
         );
-    }
-
-    /**
-     * Aggregates net amount (income - expense) grouped by year-month.
-     * Example key: "2025-03"
-     */
-    private Map<String, Double> buildMonthlyTrends(List<FinancialRecord> records) {
-        Map<String, Double> trends = new TreeMap<>(); // TreeMap keeps months in order
-
-        for (FinancialRecord r : records) {
-            if (r.getDate() == null) continue;
-
-            String month = r.getDate().getYear() + "-"
-                    + String.format("%02d", r.getDate().getMonthValue());
-
-            double value = r.getType() == RecordType.INCOME ? r.getAmount() : -r.getAmount();
-            trends.merge(month, value, Double::sum);
-        }
-
-        return trends;
     }
 }
